# test-python-poetry

./: README.md  pyproject.toml
test_numpy/: __main__.py
