[tool.poetry]
name = "test-python-poetry"
version = "0.1.0"
description = ""
authors = ["RYOTA-F <ry.fj0304@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
